# markup-tag-evaluation

./: .gitignore  README.md  pyproject.toml  setup.py
markup_tag_evaluation/: awesome_align_tokenize.py  constants.py  evaluate_markup_tags.py  parse_tags.py  tag_evaluation.py
scripts/: evaluate-markup-tags.py  test.sh
